# oj-eval-codex-038-20260401222927

./: .gitignore  CMakeLists.txt  src.hpp
src/: main.cpp
submit_acmoj/: acmoj_client.py
